added an update free seats dialog. prior to passing that info from activity to service

--- a/clientTaxiCab/res/values/strings.xml
+++ b/clientTaxiCab/res/values/strings.xml
@@ -9,5 +9,6 @@
     <string name="line_4">4</string>
     <string name="line_4a">4א</string>
     <string name="line_5">5</string>
+    <string name="passengerReportButton">Any Free Seats?</string>
 
 </resources>
